Add code optimizations and support for labels